# evolutiontransformer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  start.sh
.github/workflows/: main.yml
evolutiontransformer/: api.py  redis.py  worker.py
finetuning/: finetuning.ipynb
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  wrangler.jsonc
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Dropdown.jsx  GlobalControls.jsx  Header.jsx  InferencePopup.jsx  LayerRecipe.jsx  ModelSelection.jsx  NumberInput.jsx  Options.jsx  Recipe.jsx
frontend/src/hooks/: useAPI.js
frontend/src/utils/: devLogger.js  modelCookies.js
tests/: test_api.py  test_hf_api.py  test_model_actions.py
