[project]
name = "evolutiontransformer"
version = "0.1.0"
description = "Simulating evolution among LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "celery>=5.5.3",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "fastapi>=0.116.2",
    "gradio>=5.46.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "uvicorn[standard]>=0.35.0",
]
